--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,5 @@
 @import "normalize.css";
-body, div, span {
+div, span {
   box-sizing: border-box;
   position: relative;
 
@@ -20,5 +20,83 @@ body, html {
 }
 
 body {
+  background-color: #1f1e34;
+  color: #fff;
+  font-family: "Avenir Next", "HelveticaNeue-Light", "Helvetica Neue Light",
+              "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: 100;
+}
+
+h1 {
+  font-size: 64px;
+  font-weight: 100;
+}
+h2 {
+  font-size: 48px;
+  font-weight: 100;
+}
+
+p {
+  font-size: 24px;
+}
+
+a {
+  font-weight: 400;
+  color: #fff;
+}
+
+a:hover {
+  font-weight: 400;
+  color: #dadada;
+  text-decoration: none;
+}
+
+section {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+section.logo-section nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+section.logo-section nav a {
+  margin: 0 10px;
+  text-decoration: none;
+}
+section.logo-section nav a:hover {
+  text-decoration: underline;
+}
+
+section#native,
+section#touch {
+  flex-direction: row;
+}
+.iphone-demo {
+  flex-grow: 1;
+  align-self: stretch;
+  flex-basis: 50%; 
   background-color: rgba(255,0,0,0.3);
+
+  align-items: center;
+  justify-content: center;
+}
+.feature-description {
+  flex-grow: 1;
+  align-self: stretch;
+  flex-basis: 50%; 
+  background-color: rgba(0,255,0,0.3);
+
+  justify-content: center;
+}
+.test {
+  flex-grow: 1;
+  align-self: stretch;
+  flex-basis: 50%; 
+  background-color: rgba(0,0,255,0.3);
 }
