--- a/bundle/app.css
+++ b/bundle/app.css
@@ -512,7 +512,19 @@ a:hover {
           flex-basis: 100%;
 }
 
-.section.logo nav {
+.section.intro {
+  text-align: center;
+  background-image: url("../img/background.jpg");
+  background-size: cover;
+  background-position: center;
+}
+.section.intro img,
+.section.intro h1,
+.section.intro nav {
+  z-index: 1;
+}
+
+.section.intro nav {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -526,12 +538,21 @@ a:hover {
       -ms-flex-pack: center;
           justify-content: center;
 }
-.section.logo nav a {
+.section.intro nav a {
   margin: 0 10px;
   text-decoration: none;
 }
-.section.logo nav a:hover {
+.section.intro nav a:hover {
   text-decoration: underline;
+}
+.section.intro .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: -webkit-linear-gradient(rgba(0,0,0,0), rgba(31,30,52,1));
+  background-image: linear-gradient(rgba(0,0,0,0), rgba(31,30,52,1));
 }
 
 #native,
@@ -553,13 +574,12 @@ a:hover {
   -webkit-flex-basis: 50%;
       -ms-flex-preferred-size: 50%;
           flex-basis: 50%; 
-  background-color: rgba(255,0,0,0.3);
 
-  -webkit-box-align: center;
+  -webkit-box-align: center; 
 
-  -webkit-align-items: center;
+  -webkit-align-items: center; 
 
-      -ms-flex-align: center;
+      -ms-flex-align: center; 
 
           align-items: center;
   -webkit-box-pack: center;
@@ -567,6 +587,18 @@ a:hover {
       -ms-flex-pack: center;
           justify-content: center;
 }
+.iphone-demo img.embed {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  /* 
+   * This is much better than using hard-coded margin-left / margin-top
+   * But 'transform' is not available in IE8-
+   */
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%); 
+} 
 .feature-description {
   -webkit-box-flex: 1;
   -webkit-flex-grow: 1;
@@ -578,26 +610,50 @@ a:hover {
   -webkit-flex-basis: 50%;
       -ms-flex-preferred-size: 50%;
           flex-basis: 50%; 
-  background-color: rgba(0,255,0,0.3);
-
-  -webkit-box-pack: center;
-
-  -webkit-justify-content: center;
-
-      -ms-flex-pack: center;
-
+  -webkit-box-pack: center; 
+  -webkit-justify-content: center; 
+      -ms-flex-pack: center; 
           justify-content: center;
+  padding-right: 50px;
 }
-.test {
-  -webkit-box-flex: 1;
-  -webkit-flex-grow: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  -webkit-align-self: stretch;
-      -ms-flex-item-align: stretch;
-          align-self: stretch;
-  -webkit-flex-basis: 50%;
-      -ms-flex-preferred-size: 50%;
-          flex-basis: 50%; 
-  background-color: rgba(0,0,255,0.3);
+
+#android {
+  overflow: hidden;
+}
+#android .android-robot-wrapper {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  -webkit-transform: translate(50%, 50%);
+      -ms-transform: translate(50%, 50%);
+          transform: translate(50%, 50%);
+}
+#android .android-robot-wrapper img {
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+/** Slider **/
+#slider-control {
+  padding: 3px;
+  position: fixed;
+  top: 50%;
+  right: 10px;
+  -webkit-transform: translate(0, -50%);
+      -ms-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+  z-index: 2;
+}
+#slider-control a {
+  padding: 3px;
+}
+#slider-control .dot {
+  width: 16px;
+  height: 16px;
+  border: 1px solid #fff;
+  border-radius: 50%;
+}
+#slider-control .active .dot {
+  background-color: #fff;
 }
