--- a/css/app.css
+++ b/css/app.css
@@ -60,17 +60,37 @@ a:hover {
   flex-basis: 100%;
 }
 
-.section.logo nav {
+.section.intro {
+  text-align: center;
+  background-image: url("../img/background.jpg");
+  background-size: cover;
+  background-position: center;
+}
+.section.intro img,
+.section.intro h1,
+.section.intro nav {
+  z-index: 1;
+}
+
+.section.intro nav {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.section.logo nav a {
+.section.intro nav a {
   margin: 0 10px;
   text-decoration: none;
 }
-.section.logo nav a:hover {
+.section.intro nav a:hover {
   text-decoration: underline;
+}
+.section.intro .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(rgba(0,0,0,0), rgba(31,30,52,1));
 }
 
 #native,
@@ -81,22 +101,59 @@ a:hover {
   flex-grow: 1;
   align-self: stretch;
   flex-basis: 50%; 
-  background-color: rgba(255,0,0,0.3);
 
   align-items: center;
   justify-content: center;
 }
+.iphone-demo img.embed {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  /* 
+   * This is much better than using hard-coded margin-left / margin-top
+   * But 'transform' is not available in IE8-
+   */
+  transform: translate(-50%, -50%); 
+} 
 .feature-description {
   flex-grow: 1;
   align-self: stretch;
   flex-basis: 50%; 
-  background-color: rgba(0,255,0,0.3);
-
   justify-content: center;
+  padding-right: 50px;
 }
-.test {
-  flex-grow: 1;
-  align-self: stretch;
-  flex-basis: 50%; 
-  background-color: rgba(0,0,255,0.3);
+
+#android {
+  overflow: hidden;
+}
+#android .android-robot-wrapper {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  transform: translate(50%, 50%);
+}
+#android .android-robot-wrapper img {
+  transform: rotate(-45deg);
+}
+
+/** Slider **/
+#slider-control {
+  padding: 3px;
+  position: fixed;
+  top: 50%;
+  right: 10px;
+  transform: translate(0, -50%);
+  z-index: 2;
+}
+#slider-control a {
+  padding: 3px;
+}
+#slider-control .dot {
+  width: 16px;
+  height: 16px;
+  border: 1px solid #fff;
+  border-radius: 50%;
+}
+#slider-control .active .dot {
+  background-color: #fff;
 }
