--- a/css/app.css
+++ b/css/app.css
@@ -60,15 +60,22 @@ a:hover {
   flex-basis: 100%;
 }
 
-.section#intro {
+#intro {
   text-align: center;
+}
+#intro .background {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: -1;
   background-image: url("../img/background.jpg");
   background-size: cover;
   background-position: center;
 }
-.section#intro img,
-.section#intro h1,
-.section#intro nav {
+#intro img,
+#intro h1,
+#intro nav {
   z-index: 1;
 }
 
@@ -83,39 +90,62 @@ a:hover {
     transform: translate(0, -20px);
   }
 }
-.section#intro img {
+#intro img {
   animation: float infinite linear 4s;
 }
 
-.section#intro nav {
+#intro nav {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.section#intro nav a {
+#intro nav a {
   margin: 0 10px;
   text-decoration: none;
 }
-.section#intro nav a:hover {
+#intro nav a:hover {
   text-decoration: underline;
 }
-.section#intro .overlay {
+#intro .overlay {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  /*background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0));*/
   background-image: linear-gradient(rgba(0,0,0,0), rgba(31,30,52,1));
+}
+
+#iphone-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  /*background-color: rgba(255,0,0,0.3);*/
+  
+  transition: transform linear;
+  transform: translate(0, -20%);
+}
+
+@media all and (max-height: 700px) {
+  .react-logo {
+    height: 150px;
+  }
+  h1 {
+    font-size: 48px;
+  }
+  #iphone-overlay {
+    transform: translate(0, -15%);
+  }
 }
 
 #native,
 #touch {
   flex-direction: row;
 }
+
 .iphone-demo {
-  flex-grow: 1;
+  flex: 1 0;
   align-self: stretch;
-  flex-basis: 50%; 
 
   align-items: center;
   justify-content: center;
@@ -131,11 +161,12 @@ a:hover {
   transform: translate(-50%, -50%); 
 } 
 .feature-description {
-  flex-grow: 1;
-  align-self: stretch;
-  flex-basis: 50%; 
-  justify-content: center;
-  padding-right: 50px;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  width: 50%;
+  transform: translate(0, -50%); 
+  padding-right: 100px;
 }
 
 @keyframes shake {
